fix overflowing of text under images

--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
+    align-items: center  ;
 }
 
 .algo {   
